# xash3d-fwgs

./: .gitignore  CMakeLists.txt  README.md  makelibrary.txt  wscript
common/: defaults.h  port.h  xash3d_types.h
engine/: generated_library_tables.h  ref_api.h
engine/client/: cl_scrn.c  cl_steam.c  client.h  console.c  sound.h  vid_common.c
engine/client/dll_int/: cl_game.c
engine/client/parse/: cl_parse.c
engine/client/sound/: s_load.c  s_vox.c
engine/common/: common.h  filesystem_engine.c  host.c  lib_common.c  library.h  mod_local.h  net_ws.c  net_ws_private.h  netchan.h  protocol.h  system.c  whereami.c
engine/common/http/: net_http_xash.c
engine/common/imagelib/: img_dds.c  img_main.c  img_png.c
engine/common/soundlib/: snd_utils.c
engine/platform/: platform.h
engine/platform/android/: lib_android.c
engine/platform/ogc/: net_ogc.h  sys_ogc.c  vid_ogc.c
engine/platform/posix/: lib_posix.c  net.h  sys_posix.c
engine/platform/win32/: lib_win.c
engine/server/: sv_init.c  sv_save.c
filesystem/: dir.c  dll.c  filesystem.c  filesystem_internal.h  wscript
public/: build.c  build.h  buildenums.h
ref/common/: ref_common.h  ref_context.c
ref/gl/: gl_alias.c  gl_backend.c  gl_context.c  gl_decals.c  gl_image.c  gl_local.h  gl_opengl.c  gl_rmain.c  gl_rsurf.c  gl_studio.c  link_helper.cpp
ref/glgx/: gl_backend.c  gl_image.c  gl_opengl.c  gl_rsurf.c  gl_studio.c  link_helper.cpp
ref/soft/: r_context.c  r_decals.c  r_local.h  r_main.c
scripts/waifulib/: wii.py  xcompile.py
